tests/compile_fail/no_def_attribute.stderr
error: #[def(...)] attribute requires.
 --> $DIR/no_def_attribute.rs:6:5
  |
6 |     s: u32,
  |     ^

error: cannot find attribute `defx` in this scope
 --> $DIR/no_def_attribute.rs:5:7
  |
5 |     #[defx(field_num = 1, def_type = "int32")]
  |       ^^^^ help: a derive helper attribute with a similar name exists: `def`
